ghc-4335c07/testsuite/tests/typecheck/should_compile/ValidSubs.hs
module ValidSubs where


data Moo = Moo Integer
