ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail052.hs
module ShouldFail where

data C a = B a c
